# r2e-verl

./: .gitignore  README.md  analyze_and_convert_data.py  create_r2e_gym_dataset.py  docker_image_test_results.csv  docker_image_test_results_new.csv  download_ckpt.py  download_data.py  download_model.py  output_r2e_gym.txt  output_rllm.txt  output_rllm_grpo.txt  plot_conversation_completion.py  python.txt  recipe.md  system_tools.py  test-aiohttp.py  test_all_docker_images.py  test_data.txt  tool_config.yaml
examples/grpo_trainer/: run_mistral-tool-r2e.sh  run_qwen3-1.7b-tool-rllm.sh  run_qwen3-1.7b-tool.sh  run_qwen3-14b-tool-r2e.sh  run_qwen3-14b-tool-rllm-grpo++.sh  run_qwen3-14b-tool-rllm.sh  run_qwen3-32b-tool-r2e.sh  run_qwen3-32b-tool-rllm-grpo++.sh  run_qwen3-32b-tool-rllm-grpo.sh  run_qwen3-32b-tool-rllm.sh  run_qwen3-32b-tool.sh  run_qwen3-8b-tool-r2e-multinode.sh  run_qwen3-8b-tool-r2e.sh  run_qwen3-8b-tool-rllm-grpo++.sh  run_qwen3-8b-tool-rllm-grpo.sh
modal-sandbox/: .gitignore  README.md  pyproject.toml  relace-r2e.yaml  relace-ui.yaml  relace.yaml
modal-sandbox/.github/workflows/: deploy.yml  tests.yml
modal-sandbox/scripts/: langfuse_traces.py  load_test.py
modal-sandbox/src/relace_agent/: agents.py  config.py  context.py  errors.py  logging.py  relace.py  repo.py  retrieval.py  tools.py
modal-sandbox/src/relace_agent/modal/: agent_runner.py  agent_toolbox.py  agent_toolbox_eval.py  cleanup.py  ranker_repos.py
modal-sandbox/src/relace_agent/server/: database.py  deployment.py  storage.py  toolbox.py  types.py
modal-sandbox/tests/: test_agents.py  test_config.py  test_context.py  test_repo.py  test_retrieval.py  test_tools.py
modal-sandbox/tests/modal/: test_agent_toolbox_eval.py
scripts/: install_vllm_sglang_mcore.sh
verl/tools/: api_test_tool.py  custom_tools.py  session_manager.py
verl/trainer/: main_ppo.py
verl/trainer/ppo/: ray_trainer.py
verl/utils/: http_client.py  request_limiter.py
verl/utils/dataset/: rl_dataset.py
verl/workers/: fsdp_workers.py
verl/workers/reward_manager/: __init__.py  r2e_gym.py  rllm.py
verl/workers/rllm_rewards/: code_reward.py  reward_types.py  rl_reward.py
verl/workers/rollout/: async_server.py  chat_scheduler.py
verl/workers/rollout/vllm_rollout/: vllm_async_server.py  vllm_rollout_spmd.py
